--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
 
     <string name="request_permissions_title">We need your permission</string>
     <string name="request_accounts_permissions_description">In order to sync your Facebook events with your local
-    calendar, we need permission to access your calendar. You can set these permissions in your app
+    calendar, we need permission to access your accounts and contacts. You can set these permissions in your app
     info.</string>
     <string name="request_calendar_permissions_description">In order to sync your Facebook events with your local
     calendar, we need permission to access your calendar. You can set these permissions in your app
