--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,14 +12,19 @@
 
 
     <string name="login_again">Something went wrong, please try logging in again.</string>
+    <string name="missing_permissions">Missing permissions</string>
 
     <string name="request_permissions_title">We need your permission</string>
     <string name="request_accounts_permission_description">In order to sync your Facebook events with your local
-    calendar, we need permission to access your accounts and contacts. You can set these permissions in your app
+    calendar, we need permission to access your accounts and contacts. You can enable these permissions in your app
     info.</string>
     <string name="request_calendar_permission_description">In order to sync your Facebook events with your local
-    calendar, we need permission to access your calendar. You can set these permissions in your app
+    calendar, we need permission to access your calendar. You can enable these permissions in your app
     info.</string>
+    <string name="request_account_and_calendar_permission_description">In order to sync your Facebook events with your local
+    calendar, we need permission to access your calendar and your accounts. You can enable these permissions in your app
+    info.</string>
+
     <string name="word_cancel">Cancel</string>
     <string name="word_app_info">App info</string>
 </resources>
