--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,9 +28,11 @@
     <string name="button_sync_upcoming">Sync only upcoming events now</string>
 
     <!--Settings -->
-    <string name="btnLogOut">Log out from Facebook</string>
+    <string name="button_settings">Settings</string>
+    <string name="button_logout">Log out from Facebook</string>
 
     <!--Words-->
     <string name="word_cancel">Cancel</string>
     <string name="word_app_info">App info</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
