--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,15 +24,29 @@
     info.</string>
 
     <!--Sync Fragment-->
-    <string name="button_sync_all">Sync all events now</string>
-    <string name="button_sync_upcoming">Sync only upcoming events now</string>
+    <string name="button_sync_now">Sync now</string>
 
     <!--Settings -->
+    <string name="settings_title">Settings</string>
+    <string name="dialog_logout_title">Sure?</string>
+    <string name="dialog_logout_description">Are you sure you want to log out from Facebook? If you\'re logged out,
+        your Facebook events won\'t be synced with your local calendar anymore.</string>
     <string name="button_settings">Settings</string>
     <string name="button_logout">Log out from Facebook</string>
 
+    <string name="textview_sync_events_description">Syncing events: </string>
+    <string name="textview_sync_events_value_all">all events</string>
+    <string name="textview_sync_events_value_upcoming">upcoming events</string>
+    <string name="button_sync_events">Change preference</string>
+    <string name="sync_preference_dialog_title">Change syncing preference</string>
+    <string name="sync_all_description">Sync all events</string>
+    <string name="sync_upcoming_description">Sync only upcoming events</string>
+
     <!--Words-->
+    <string name="word_yes">Yes</string>
     <string name="word_cancel">Cancel</string>
     <string name="word_app_info">App info</string>
     <string name="title_activity_main2">Main2Activity</string>
+
+    <!-- SharedPrefences -->
 </resources>
