--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,16 @@
     <string name="sync_all_description">Sync all events</string>
     <string name="sync_upcoming_description">Sync only upcoming events</string>
 
+    <!-- Navigation drawer -->
+    <string name="navigation_drawer_header_settings">Settings</string>
+    <string name="navigation_drawer_facebook_settings">Facebook settings</string>
+    <string name="navigation_drawer_local_calendar_settings">Local calendar settings</string>
+    <string name="navigation_drawer_sync_settings">Sync settings</string>
+    <string name="navigation_drawer_stop_sync">Stop sync</string>
+    <string name="navigation_drawer_start_sync">Start sync</string>
+    <string name="navigation_drawer_log_out">Log out from Facebook</string>
+    <string name="navigation_drawer_report_a_bug">Report a bug</string>
+
     <!--Words-->
     <string name="word_yes">Yes</string>
     <string name="word_cancel">Cancel</string>
