--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,24 +26,6 @@
     <!--Sync Fragment-->
     <string name="button_sync_now">Sync now</string>
 
-    <!--Settings -->
-    <string name="facebook_settings_title">Facebook settings</string>
-    <string name="local_calendar_settings_title">Local calendar settings</string>
-    <string name="sync_settings_title">Sync settings</string>
-    <string name="dialog_logout_title">Sure?</string>
-    <string name="dialog_logout_description">Are you sure you want to log out from Facebook? If you\'re logged out,
-        your Facebook events won\'t be synced with your local calendar anymore.</string>
-    <string name="button_settings">Settings</string>
-    <string name="button_logout">Log out from Facebook</string>
-
-    <string name="textview_sync_events_description">Syncing events: </string>
-    <string name="textview_sync_events_value_all">all events</string>
-    <string name="textview_sync_events_value_upcoming">upcoming events</string>
-    <string name="button_sync_events">Change preference</string>
-    <string name="sync_preference_dialog_title">Change syncing preference</string>
-    <string name="sync_all_description">Sync all events</string>
-    <string name="sync_upcoming_description">Sync only upcoming events</string>
-
     <!-- Navigation drawer -->
     <string name="navigation_drawer_header_settings">Settings</string>
     <string name="navigation_drawer_facebook_settings">Facebook settings</string>
@@ -54,6 +36,28 @@
     <string name="navigation_drawer_log_out">Log out from Facebook</string>
     <string name="navigation_drawer_log_in">Log in with Facebook</string>
     <string name="navigation_drawer_report_a_bug">Report a bug</string>
+
+    <!--Settings -->
+    <string name="facebook_settings_title">Facebook settings</string>
+    <string name="local_calendar_settings_title">Local calendar settings</string>
+    <string name="sync_settings_title">Sync settings</string>
+    <string name="dialog_logout_title">Sure?</string>
+    <string name="dialog_logout_description">Are you sure you want to log out from Facebook? If you\'re logged out,
+        your Facebook events won\'t be synced with your local calendar anymore.</string>
+    <string name="button_settings">Settings</string>
+    <string name="button_logout">Log out from Facebook</string>
+
+    <!-- Sync Settings -->
+    <string name="sync_settings_wifi">Wifi</string>
+    <string name="sync_settings_wifi_description">Sync your Facebook events only when your phone has an active wifi connection.</string>
+    <string name="sync_settings_notifications">Notifications</string>
+    <string name="sync_settings_notifications_description">Show notifications when syncing problems occur.</string>
+    <string name="sync_settings_sync_interval">Sync interval</string>
+    <string name="sync_settings_sync_interval_description">The interval with which your Facebook events are synced with your local calendar.</string>
+    <string name="sync_settings_sync_interval_1hr">1 hour</string>
+    <string name="sync_settings_sync_interval_6hrs">6 hours</string>
+    <string name="sync_settings_sync_interval_12hrs">12 hours</string>
+    <string name="sync_settings_sync_interval_24hrs">24 hours</string>
 
     <!--Words-->
     <string name="word_yes">Yes</string>
