--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,15 @@
     <string name="sync_settings_sync_interval_12hrs">12 hours</string>
     <string name="sync_settings_sync_interval_24hrs">24 hours</string>
 
+    <!-- Facebook Settings -->
+    <string name="facebook_settings_birthdays">Birthdays</string>
+    <string name="facebook_settings_birthdays_description">Sync Facebook birthdays to local calendar as well.</string>
+    <string name="facebook_settings_show_link">Show Facebook link</string>
+    <string name="facebook_settings_show_link_description">Show a link to the Facebook event in the event description.</string>
+    <string name="facebook_settings_sync_range">Syncing range</string>
+    <string name="facebook_settings_sync_range_all">All events</string>
+    <string name="facebook_settings_sync_range_upcoming">Upcoming events</string>
+
     <!--Words-->
     <string name="word_yes">Yes</string>
     <string name="word_cancel">Cancel</string>
